CSS mobile styles complete BUG: layout on IPhone5

--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,7 @@ body {
   background-color: var(--main-background-blue);
   font-family: var(--inter);
   font-size: var(--body-copy);
+  font-weight: var(--bold);
   color: var(--paragraph-white);
   text-align: center;
 }
@@ -69,6 +70,7 @@ body {
 p {
   font-size: 1.36em;
   line-height: 2em;
+  font-weight: var(--regular);;
 }
 
 
@@ -96,10 +98,8 @@ p {
 
 
 #image-container {
-  /* height: 240px; */
-  /* width: 100%; */
   background-color: var(--accent-violet);
-  border-radius: 5px 5px 0 0;
+  border-radius: 5.5px 5.5px 0px 0px;
   /* background-image: url('../images/image-header-mobile.jpg'); */
   
 }
@@ -134,6 +134,15 @@ p {
   justify-content: center;
 }
 
+.info-container h2 {
+  margin-bottom: 0px;
+  font-weight: var(--bold);
+}
+
+.info-container p {
+  margin-top: 0.50em;
+}
+
 
 
 
@@ -142,4 +151,16 @@ p {
 
 /*********** FOOTER ***********/
 
+footer {
+  padding: 0.5em;
+  margin-top: 1.5em;
+  margin-bottom: 0.5em;
+}
 
+.attribution { 
+  font-size: 11px; text-align: center; 
+}
+
+.attribution a { 
+  color: hsl(228, 45%, 44%); 
+}
